--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,67 @@ code {
 }
 
 .app-container {
-  
+  .login-container {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    .title {
+      text-align: center;
+      font-size: 25px;
+      font-weight: 600;
+      padding-top: 20px;
+    }
+
+    .text {
+      font-weight: 600;
+      padding-bottom: 3px;
+    }
+
+    input {
+      padding: 12px 7px;
+      outline: none;
+      background: #1618230f;
+      border: #1618230f;
+      margin-bottom: 10px;
+      border-radius: 3px;
+      width: 100%;
+      &:hover {
+        background-color: #dedede;
+      }
+    }
+
+    .input-2 {
+      position: relative;
+      i {
+        position: absolute;
+        top: 15px;
+        right: 10px;
+        cursor: pointer;
+      }
+    }
+
+    button{
+      padding: 10px;
+      margin-top: 5px;
+      border-radius: 3px;
+      outline: none;
+      border: none;
+      &.active {
+        background-color: #fe2c55;
+        color: white;
+      }
+    }
+
+    button[disabled=disabled], button:disabled {
+      cursor: not-allowed;
+    }
+
+    .back {
+      text-align: center;
+      margin-top: 20px;
+      cursor: pointer;
+    }
+  }
 }
 
 
